@@ -383,7 +383,7 @@ public class TaleUtils {
         for (int i = 0; i < size; ++i) {
             double a = Math.random() * 9.0D;
             a = Math.ceil(a);
-            int randomNum = (new Double(a)).intValue();
+            int randomNum = (Double.valueOf(a)).intValue();
             num = num + randomNum;
         }
 
